[tool.poetry]
name = "unit-ledger"
version = "0.1.0"
description = "Moving object ledger for camera pointing"
authors = ["ralatsdc <raymond.leclair@springbok.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
coloredlogs = "^15.0.1"
numpy = "^1.24.2"
numpy-quaternion = "^2022.4.3"
paho-mqtt = "^1.5.0"
pandas = "^2.0.2"
schedule = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
mypy = "^1.4.0"
ipython = "^8.14.0"
jupyterlab = "^4.0.2"
notebook = "^6.5.4"
pkgconfig = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
